# minahdev.cloud

./: .cursorrules  .gitignore  .gitmodules  .markdownlint.json  .pre-commit-config.yaml  .prettierrc  AGENTS.md  CLAUDE.md  CURSOR.md  docker-compose.yaml
.obsidian/: app.json  graph.json  workspace.json
_docs/: auth-rbac-handoff.md  obsidian_color_grup.md
a2a-hybrid-agents/: .env.example  .gitignore  README.md  pyproject.toml
a2a-hybrid-agents/deploy/aws/: Dockerfile
a2a-hybrid-agents/deploy/cloudflared/: config.yml
a2a-hybrid-agents/src/cloud/: __init__.py
a2a-hybrid-agents/src/cloud/orchestrator/: server.py
a2a-hybrid-agents/src/onprem/: __init__.py  graph_store.py
a2a-hybrid-agents/src/onprem/agents/: _app.py
a2a-hybrid-agents/src/onprem/agents/exaone/: server.py
a2a-hybrid-agents/src/onprem/agents/qwen/: server.py
a2a-hybrid-agents/src/onprem/llm/: ollama_client.py
a2a-hybrid-agents/src/shared/: __init__.py  a2a_client.py  a2a_schemas.py  config.py  mcp_tools.py
a2a-hybrid-agents/tests/: test_a2a_schemas.py  test_agent_roundtrip.py  test_orchestrator.py
a2a-hybrid-agents/web/: README.md
minahai/: .dockerignore  .env.auth.example  .gitignore  .importlinter  CLAUDE.md  Dockerfile  auth_main.py  main.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt
minahai/_docs/: CLAUDE.md  PACE_ERD.md  clean_architecture.md  docker-rules.md  oauth-social-login.md  pyproject-toml.md
minahai/alembic/: env.py
minahai/apps/: chat_html.py  chat_mirror.py  deps.py
minahai/scripts/: backfill_mail_embeddings.py  generate_jwt_keys.sh  migrate_admin_allowlist.py  migrate_profile_survey.py  rotate_profile_key.py  seed_foods.py
minahflutter/: README.md  analysis_options.yaml  pubspec.yaml
minahflutter/lib/: main.dart
minahflutter/test/: widget_test.dart
minahflutter/web/: index.html  manifest.json
minahview/: .cursorrules  .dockerignore  .eslintrc.json  .gitignore  CLAUDE.md  Dockerfile  README.md  middleware.ts  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
minahview/_docs/: CLAUDE.md  (+3 more)
scripts/: build_mafra_food_json.py  validate_harness.py
(+707 files in other folders)
