[project]
name = "a2a-hybrid-agents"
version = "0.1.0"
description = "Hybrid multi-agent portfolio: on-prem GPU agents (EXAONE 3.5 2.4B, Qwen2.5 1.5B) talk to a no-AI AWS orchestrator over A2A/MCP, sharing memory in a Kuzu graph DB, streaming to a Vercel frontend."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["a2a", "mcp", "multi-agent", "llm", "graph-database", "ollama"]

# 공통 코어 — 세 유닛 모두 사용하는 최소 집합 (무거운 dep 없음)
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "httpx>=0.27",
  "structlog>=24.1",
]

[project.optional-dependencies]
# 온프렘 Ubuntu(이 노트북, 헤드리스) — GPU LLM 에이전트.
# torch 미포함: Ollama(llama.cpp+CUDA)가 GPU 추론 담당 → 4GB VRAM에 최적.
agent = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "ollama>=0.3",       # 로컬 LLM 런타임 클라이언트 (모델 스왑 / keep_alive)
  "mcp>=1.2",          # Model Context Protocol SDK (툴/컨텍스트 노출)
  "a2a-sdk>=0.2",      # Agent2Agent 프로토콜 SDK (import 이름: a2a)
  "kuzu>=0.6",         # 임베디드 그래프 DB (공유 메모리 / 메시지 로그)
]

# AWS 오케스트레이터 — AI 없음. 라우팅/조율만. GPU·DB 의존성 없음(가벼움).
orchestrator = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "mcp>=1.2",
  "a2a-sdk>=0.2",
]

# uv 기본 개발 그룹 (uv sync 시 자동 설치)
[dependency-groups]
dev = [
  "ruff>=0.6",
  "mypy>=1.11",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "anyio>=4.4",
]

[project.scripts]
onprem-exaone      = "onprem.agents.exaone.server:main"
onprem-qwen        = "onprem.agents.qwen.server:main"
cloud-orchestrator = "cloud.orchestrator.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shared", "src/onprem", "src/cloud"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["shared", "onprem", "cloud"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
